# dsversioner

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
doc/: developer.md  index.md
dsversioner/: Dataset.py  DatasetVersion.py  FileSystemStorage.py  ObjectDatasetFileSystemStorage.py  ObjectDatasetVersion.py  __init__.py
src/: main.py  requirements.txt
src/dsversioner/: Dataset.py  DatasetMetadata.py  DatasetRecordData.py  DatasetStorageContext.py  DatasetVersion.py  Errors.py  Exceptions.py  FilesystemTabularStorage.py  ObjectDataset.py  ObjectDatasetFileSystemStorage.py  ObjectDatasetMetadata.py  ObjectDatasetRecordData.py  ObjectDatasetStorage.py  ObjectDatasetVersion.py  Serializable.py  Storage.py  StorageSQL.py  __init__.py
src/some_ideas/: Data.old.py  FilesystemTabularStorage.py  main.old.py
