[project]
name = "dsversioner"
version = "0.9.5"
authors = [
  { name="Maxim Dernovoi", email="author@example.com" },
]
description = "Flexible and extensible dataset versioning."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# in synch with requirements.txt
dependencies = [
    "pandas == 2.0.1",
    "pyarrow == 12.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "/docs",
    "/dsversioner",
    "CONTRIBUTING.md",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "SECURITY.md"
]
exclue = [
    ".gitignore"
]

